src/main/java/org/shkandyuk/nuxmv/grammar/parser/NuXmvParser.java
// Generated from /home/denis/Documents/5_ITMO/NIR/nuXmv/NuXmvParser.g4 by ANTLR 4.13.1
package org.shkandyuk.nuxmv.grammar.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NuXmvParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MODULE=1, IVAR=2, SEMI=3, SEMICOLON=4, VAR=5, ASSIGN=6, INIT=7, L_BRACKET=8, 
		R_BRACKET=9, TRANS=10, INVAR=11, INIT_ASSIGN=12, ASSIGN_OP=13, EXCLAMATION_EQ=14, 
		L_ARROW_EQ=15, R_ARROW_EQ=16, L_ARROW=17, R_ARROW=18, EQ=19, NEXT_ASSIGN=20, 
		CASE=21, ESAC=22, BIT_OR=23, COND_EXPR=24, BIT_AND=25, EXCLAMATION=26, 
		TRUE=27, FALSE=28, REAL=29, L_BRACE=30, R_BRACE=31, COMMA=32, ID=33, NUMBER=34, 
		X=35, G=36, F=37, U=38, WS=39, COMMENT=40, LINE_COMMENT=41, STRING=42, 
		BOOLEAN=43;
	public static final int
		RULE_module = 0, RULE_ivar = 1, RULE_var = 2, RULE_assign = 3, RULE_init = 4, 
		RULE_trans = 5, RULE_invarspec = 6, RULE_assignList = 7, RULE_initAssign = 8, 
		RULE_nextAssign = 9, RULE_condition = 10, RULE_condExpr = 11, RULE_expr = 12, 
		RULE_orExpr = 13, RULE_andExpr = 14, RULE_equalityExpr = 15, RULE_relationalExpr = 16, 
		RULE_unaryExpr = 17, RULE_primaryExpr = 18, RULE_type = 19, RULE_valueList = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"module", "ivar", "var", "assign", "init", "trans", "invarspec", "assignList", 
			"initAssign", "nextAssign", "condition", "condExpr", "expr", "orExpr", 
			"andExpr", "equalityExpr", "relationalExpr", "unaryExpr", "primaryExpr", 
			"type", "valueList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'MODULE'", "'IVAR'", "':'", "';'", "'VAR'", "'ASSIGN'", "'INIT'", 
			"'('", "')'", "'TRANS'", "'INVAR'", "'init'", "':='", "'!='", "'<='", 
			"'>='", "'<'", "'>'", "'='", "'next'", "'case'", "'esac'", "'|'", "' :'", 
			"'&'", "'!'", "'TRUE'", "'FALSE'", "'Real'", "'{'", "'}'", "','", null, 
			null, "'X'", "'G'", "'F'", "'U'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MODULE", "IVAR", "SEMI", "SEMICOLON", "VAR", "ASSIGN", "INIT", 
			"L_BRACKET", "R_BRACKET", "TRANS", "INVAR", "INIT_ASSIGN", "ASSIGN_OP", 
			"EXCLAMATION_EQ", "L_ARROW_EQ", "R_ARROW_EQ", "L_ARROW", "R_ARROW", "EQ", 
			"NEXT_ASSIGN", "CASE", "ESAC", "BIT_OR", "COND_EXPR", "BIT_AND", "EXCLAMATION", 
			"TRUE", "FALSE", "REAL", "L_BRACE", "R_BRACE", "COMMA", "ID", "NUMBER", 
			"X", "G", "F", "U", "WS", "COMMENT", "LINE_COMMENT", "STRING", "BOOLEAN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NuXmvParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NuXmvParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(NuXmvParser.MODULE, 0); }
		public TerminalNode ID() { return getToken(NuXmvParser.ID, 0); }
		public List<IvarContext> ivar() {
			return getRuleContexts(IvarContext.class);
		}
		public IvarContext ivar(int i) {
			return getRuleContext(IvarContext.class,i);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public List<InitContext> init() {
			return getRuleContexts(InitContext.class);
		}
		public InitContext init(int i) {
			return getRuleContext(InitContext.class,i);
		}
		public List<TransContext> trans() {
			return getRuleContexts(TransContext.class);
		}
		public TransContext trans(int i) {
			return getRuleContext(TransContext.class,i);
		}
		public List<InvarspecContext> invarspec() {
			return getRuleContexts(InvarspecContext.class);
		}
		public InvarspecContext invarspec(int i) {
			return getRuleContext(InvarspecContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(MODULE);
			setState(43);
			match(ID);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IVAR) {
				{
				{
				setState(44);
				ivar();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(50);
				var();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ASSIGN) {
				{
				{
				setState(56);
				assign();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INIT) {
				{
				{
				setState(62);
				init();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TRANS) {
				{
				{
				setState(68);
				trans();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INVAR) {
				{
				{
				setState(74);
				invarspec();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IvarContext extends ParserRuleContext {
		public TerminalNode IVAR() { return getToken(NuXmvParser.IVAR, 0); }
		public TerminalNode ID() { return getToken(NuXmvParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(NuXmvParser.SEMI, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(NuXmvParser.SEMICOLON, 0); }
		public IvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ivar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterIvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitIvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitIvar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IvarContext ivar() throws RecognitionException {
		IvarContext _localctx = new IvarContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ivar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(IVAR);
			setState(81);
			match(ID);
			setState(82);
			match(SEMI);
			setState(83);
			type();
			setState(84);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(NuXmvParser.VAR, 0); }
		public TerminalNode ID() { return getToken(NuXmvParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(NuXmvParser.SEMI, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(NuXmvParser.SEMICOLON, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(VAR);
			setState(87);
			match(ID);
			setState(88);
			match(SEMI);
			setState(89);
			type();
			setState(90);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(NuXmvParser.ASSIGN, 0); }
		public AssignListContext assignList() {
			return getRuleContext(AssignListContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(ASSIGN);
			setState(93);
			assignList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitContext extends ParserRuleContext {
		public TerminalNode INIT() { return getToken(NuXmvParser.INIT, 0); }
		public TerminalNode L_BRACKET() { return getToken(NuXmvParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(NuXmvParser.R_BRACKET, 0); }
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(INIT);
			setState(96);
			match(L_BRACKET);
			setState(97);
			expr();
			setState(98);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TransContext extends ParserRuleContext {
		public TerminalNode TRANS() { return getToken(NuXmvParser.TRANS, 0); }
		public TerminalNode L_BRACKET() { return getToken(NuXmvParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(NuXmvParser.R_BRACKET, 0); }
		public TransContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trans; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterTrans(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitTrans(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitTrans(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TransContext trans() throws RecognitionException {
		TransContext _localctx = new TransContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_trans);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(TRANS);
			setState(101);
			match(L_BRACKET);
			setState(102);
			expr();
			setState(103);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InvarspecContext extends ParserRuleContext {
		public TerminalNode INVAR() { return getToken(NuXmvParser.INVAR, 0); }
		public TerminalNode L_BRACKET() { return getToken(NuXmvParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(NuXmvParser.R_BRACKET, 0); }
		public InvarspecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_invarspec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterInvarspec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitInvarspec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitInvarspec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InvarspecContext invarspec() throws RecognitionException {
		InvarspecContext _localctx = new InvarspecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_invarspec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(INVAR);
			setState(106);
			match(L_BRACKET);
			setState(107);
			expr();
			setState(108);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignListContext extends ParserRuleContext {
		public List<InitAssignContext> initAssign() {
			return getRuleContexts(InitAssignContext.class);
		}
		public InitAssignContext initAssign(int i) {
			return getRuleContext(InitAssignContext.class,i);
		}
		public List<NextAssignContext> nextAssign() {
			return getRuleContexts(NextAssignContext.class);
		}
		public NextAssignContext nextAssign(int i) {
			return getRuleContext(NextAssignContext.class,i);
		}
		public AssignListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterAssignList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitAssignList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitAssignList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignListContext assignList() throws RecognitionException {
		AssignListContext _localctx = new AssignListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(112);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INIT_ASSIGN:
					{
					setState(110);
					initAssign();
					}
					break;
				case NEXT_ASSIGN:
					{
					setState(111);
					nextAssign();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INIT_ASSIGN || _la==NEXT_ASSIGN );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitAssignContext extends ParserRuleContext {
		public TerminalNode INIT_ASSIGN() { return getToken(NuXmvParser.INIT_ASSIGN, 0); }
		public TerminalNode L_BRACKET() { return getToken(NuXmvParser.L_BRACKET, 0); }
		public TerminalNode ID() { return getToken(NuXmvParser.ID, 0); }
		public TerminalNode R_BRACKET() { return getToken(NuXmvParser.R_BRACKET, 0); }
		public TerminalNode ASSIGN_OP() { return getToken(NuXmvParser.ASSIGN_OP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(NuXmvParser.SEMICOLON, 0); }
		public InitAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterInitAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitInitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitInitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitAssignContext initAssign() throws RecognitionException {
		InitAssignContext _localctx = new InitAssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_initAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(INIT_ASSIGN);
			setState(117);
			match(L_BRACKET);
			setState(118);
			match(ID);
			setState(119);
			match(R_BRACKET);
			setState(120);
			match(ASSIGN_OP);
			setState(121);
			expr();
			setState(122);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NextAssignContext extends ParserRuleContext {
		public TerminalNode NEXT_ASSIGN() { return getToken(NuXmvParser.NEXT_ASSIGN, 0); }
		public TerminalNode L_BRACKET() { return getToken(NuXmvParser.L_BRACKET, 0); }
		public TerminalNode ID() { return getToken(NuXmvParser.ID, 0); }
		public TerminalNode R_BRACKET() { return getToken(NuXmvParser.R_BRACKET, 0); }
		public TerminalNode ASSIGN_OP() { return getToken(NuXmvParser.ASSIGN_OP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(NuXmvParser.SEMICOLON, 0); }
		public NextAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nextAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterNextAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitNextAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitNextAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NextAssignContext nextAssign() throws RecognitionException {
		NextAssignContext _localctx = new NextAssignContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_nextAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(NEXT_ASSIGN);
			setState(125);
			match(L_BRACKET);
			setState(126);
			match(ID);
			setState(127);
			match(R_BRACKET);
			setState(128);
			match(ASSIGN_OP);
			setState(129);
			expr();
			setState(130);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public TerminalNode CASE() { return getToken(NuXmvParser.CASE, 0); }
		public TerminalNode ESAC() { return getToken(NuXmvParser.ESAC, 0); }
		public List<CondExprContext> condExpr() {
			return getRuleContexts(CondExprContext.class);
		}
		public CondExprContext condExpr(int i) {
			return getRuleContext(CondExprContext.class,i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(CASE);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 13735775174912L) != 0)) {
				{
				{
				setState(133);
				condExpr();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			match(ESAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondExprContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode COND_EXPR() { return getToken(NuXmvParser.COND_EXPR, 0); }
		public TerminalNode SEMICOLON() { return getToken(NuXmvParser.SEMICOLON, 0); }
		public CondExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).enterCondExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuXmvParserListener ) ((NuXmvParserListener)listener).exitCondExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuXmvParserVisitor ) return ((NuXmvParserVisitor<? extends T>)visitor).visitCondExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondExprContext condExpr() throws RecognitionException {
		CondExprContext _localctx = new CondExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			expr();
			setState(142);
			match(COND_EXPR);
			setState(143);
			expr();
			setState(144);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
